import { ManagerDashboardScreen } from '@/src/screens/manager/manager-dashboard-screen';

export default ManagerDashboardScreen;

